refactor: cleanup pós-upgrade — habilita threads virtuais e aplica idiomas Java 21+/25 (switch com pattern matching, getFirst de Sequenced Collections, unnamed vars em catch) e remove os comentários remanescentes.
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>